--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 title = "lucas newcomb"
 
 # The URL the site will be built for
-base_url = "https://example.com"
+base_url = "https://pants721.github.io"
 
 theme = "no-style-please"
 
