added rust headers and about page

--- a/config.toml
+++ b/config.toml
@@ -27,5 +27,6 @@ highlight_theme = "gruvbox-dark"
 header_nav = [
     { name = "home", url = "/" },
 	{ name = "blog", url = "/blog" },
+	{ name = "about", url = "/about" },
     { name = "contact", url = "/contact" },
 ]
