--- a/config.toml
+++ b/config.toml
@@ -24,7 +24,7 @@ taxonomies = [
 # Whether to do syntax highlighting
 # Theme can be customised by setting the `highlight_theme` variable to a theme supported by Zola
 highlight_code = true
-highlight_theme = "material-dark"
+highlight_theme = "gray-matter-dark"
 
 [extra]
 
