--- a/config.toml
+++ b/config.toml
@@ -2,6 +2,8 @@ title = "pantsnet"
 
 author = "Lucas Newcomb"
 
+description = "Lucas Newcomb's personal site"
+
 # The URL the site will be built for
 base_url = "https://pants721.github.io"
 
@@ -34,3 +36,5 @@ header_nav = [
 	{ name = "projects", url = "/projects" },
     { name = "contact", url = "/contact" },
 ]
+
+logo = "images/favicon-32x32.png"
