--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-title = "pantsnet"
+title = "pants-hub"
 
 author = "Lucas Newcomb"
 
@@ -15,7 +15,7 @@ compile_sass = true
 # Whether to build a search index to be used later on by a JavaScript library
 build_search_index = true
 
-generate_feed = true
+# generate_feed = true
 
 taxonomies = [
 	{name = "tags", feed = true},
