--- a/config.toml
+++ b/config.toml
@@ -15,7 +15,7 @@ compile_sass = true
 # Whether to build a search index to be used later on by a JavaScript library
 build_search_index = true
 
-# generate_feed = true
+generate_feeds = true
 
 taxonomies = [
 	{name = "tags", feed = true},
@@ -35,6 +35,7 @@ header_nav = [
 	{ name = "blog", url = "/blog" },
 	{ name = "projects", url = "/projects" },
     { name = "contact", url = "/contact" },
+    { name = "resume", url = "/lucas-newcomb-resume.pdf" },
 ]
 
 logo = "images/android-chrome-512x512.png"
